@@ -36,7 +36,7 @@
     <!ENTITY lazybridge.xml        SYSTEM "xml/lazybridge.xml" >
     <!ENTITY formbroker.xml        SYSTEM "xml/formbroker.xml" >
     <!ENTITY version	           	  "3.2" >
-    <!ENTITY fullversion           "3.2.6" >
+    <!ENTITY fullversion           "3.2.7" >
     <!ENTITY version2-series	     "2.0,2.1,2.2,2.3,2.4" >
     <!ENTITY version2-generic	     "2.x" >
     <!ENTITY version3-generic      "3.x" >
